add redux-toolkit todo app

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 90%;
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-direction: column;
+}
+
+.App-form {
+  width: 30%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.App-form input {
+  width: 85%;
+  height: 2rem;
+  font-size: 1.3rem;
+}
+
+.App-form button {
+  width: 10%;
+  height: 2.3rem;
+  font-size: 1.6rem;
+  background: rgb(17, 170, 149);
   color: white;
+  border: none;
 }
 
-.App-link {
-  color: #61dafb;
+.App-form button:hover {
+  background: rgb(8, 141, 123);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Todos {
+  width: 30%;
 }
